--- a/_posts/2023-03-19-ftpl.md
+++ b/_posts/2023-03-19-ftpl.md
@@ -3,11 +3,16 @@ title: Fiscal theory of the price level
 layout: post
 ---
 
-I was surprised while reading Brad DeLong's [Slouching Towards Utopia](https://www.basicbooks.com/titles/j-bradford-delong/slouching-towards-utopia/9781541604247/) that he relies heavily on the fiscal theory of the price level. I'll admit that I am not an expert on it. I've known about it for 25 years or so, as one of my grad school professors did some work related to it, but I never bothered to dig into it in any depth. The initial literature, while readable for a PhD student, had a writing style that made it really hard to see the points the authors were trying to make. Luckily, there are better introductions today. Some examples:
+Reading Brad DeLong's [Slouching Towards Utopia](https://www.basicbooks.com/titles/j-bradford-delong/slouching-towards-utopia/9781541604247/), I was surprised to see that he explains events using the fiscal theory of the price level (FTPL). The FTPL is not my area of expertise. I've known about it for 25 years or so, as one of my grad school professors told us about some related research he had done, but I never bothered to dig into it in any depth. The initial literature, while not a technical challenge for a PhD student, employed a writing style that made it hard to follow the points the authors were trying to make. Luckily, there are better introductions today. 
 
-- [Analyzing Fiscal Policy Matters More Than Ever: The Fiscal Theory of the Price Level and Inflation](https://www.richmondfed.org/publications/research/economic_brief/2022/eb_22-39)
-- [Fiscal Theory of the Price Level](https://users.nber.org/~bassetto/research/palgrave/ftheorypost.pdf)
-- [An old reference that some people liked](https://www.nber.org/system/files/working_papers/w7668/w7668.pdf) (but never helped me)
-- [The Fiscal Theory of the Price Level: An Introduction and Overview (article)](https://www.johnhcochrane.com/research-all/fiscal-theory-jep-article)
-- [A conference on the FTPL in 2016](https://bfi.uchicago.edu/event/next-steps-for-the-fiscal-theory-of-the-price-level/) Maybe not useful for understanding the details, but clearly presents the issues
-- [A Handbook chapter that may or may not be helpful, that I haven't read](https://uva.theopenscholar.com/files/eric-leeper/files/leeper-leith-handbook-feb2016-final.pdf)
+A few recent pieces of background reading:
+
+- [Analyzing Fiscal Policy Matters More Than Ever: The Fiscal Theory of the Price Level and Inflation](https://www.richmondfed.org/publications/research/economic_brief/2022/eb_22-39) A non-technical (for someone with a PhD in economics) introduction to the FTPL. I recommend this because it demonstrates what I see as the critical flaw of the FTPL. The author goes through a nice example of how the FTPL means student loan forgiveness would cause inflation. When it gets to the part where we get inflation, he writes "what has to equilibrate this imbalance is the price level". What are the mechanisms? That is left as an exercise for the reader. Actually, it was laid out earlier in the article. "Congress has the legislative power to change the behavior of the Fed, mandating it to be a "passive" policy institution designed to supply enough revenue via the inflation tax or its excess earnings to preserve budget balance while Congress would be free to pursue its own fiscal objectives." That's quite an assumption!
+- [The Fiscal Theory of the Price Level: An Introduction and Overview (article)](https://www.johnhcochrane.com/research-all/fiscal-theory-jep-article) That paper is a non-technical introduction to John Cochrane's book. A related, but different, [paper by the same author](https://www.aeaweb.org/articles?id=10.1257/jep.36.4.125) was published in the *Journal of Economic Perspectives* in Fall 2022.
+- [A Handbook chapter](https://uva.theopenscholar.com/files/eric-leeper/files/leeper-leith-handbook-feb2016-final.pdf) It may or may not be helpful. I haven't read it.
+- [Fiscal Theory of the Price Level](https://users.nber.org/~bassetto/research/palgrave/ftheorypost.pdf) This is not an introduction the FTPL. I nonetheless love the way it makes the issues clear. "...it is now widely agreed that the FTPL requires an implicit or explicit institutional commitment to prevent a government default (or excess repayments by the government) through an appropriate (de)monetization of debt". It then makes a comparison with Sargent and Wallace (1981).
+
+And a couple of others:
+
+- [A conference on the FTPL in 2016](https://bfi.uchicago.edu/event/next-steps-for-the-fiscal-theory-of-the-price-level/) Maybe not useful for understanding the details, but makes clear many of the issues.
+- [An old reference that some people said clarified all the issues](https://www.nber.org/system/files/working_papers/w7668/w7668.pdf) It never helped me, but YMMV.
