Post about DConf 2024

--- a/_posts/2024-06-03-dconf-2024.md
+++ b/_posts/2024-06-03-dconf-2024.md
@@ -2,7 +2,7 @@
 title: A strong lineup for DConf 2024
 layout: post
 ---
-The D programming language continues progress nicely. One sign of that is the nice lineup of speakers at DConf in September. I've never gone (most have been in Europe) but they're always livestreamed. I committed to using D after seeing some of the videos from DConf posted on Reddit back in 2013. I don't actually remember many details, but the upcoming support of shared libraries, and the recognition by leadership of the importance of shared libraries, was exactly what I was looking for in a fast language. I've been using D heavily for more than a decade with no compelling reason to switch to anything else.
+The D programming language continues to progress nicely. One sign of that is the lineup of speakers at DConf in September. I've never gone (most have been in Europe) but they're always livestreamed. I actually committed to using D after seeing some of the videos from DConf posted on Reddit back in 2013. I don't remember many details, but the upcoming support of shared libraries, and the recognition by leadership of the importance of shared libraries, was exactly what I was looking for in a fast language. I've been using D heavily for more than a decade with no compelling reason to switch to anything else.
 
 [A link to the schedule can be found here.](https://dconf.org/2024/index.html#schedule) Let's look at some of the topics:
 
